tests/cases/compiler/slashGreatInJsxAttributeValue/index.tsx
<App 
    v=<b>text > text</b> 
/>
//~^^ ERROR: Unexpected token. Did you mean `{'>'}` or `&gt;`?
//~| ERROR: Unexpected token. Did you mean `{'>'}` or `&gt;`?